<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory  android:title="@string/general">
    <SwitchPreference
        android:key="@string/notification"
        android:title="@string/enable_notification"
        android:defaultValue="true"
        android:icon="@drawable/ic_baseline_notifications_24"

        />


    </PreferenceCategory>
    <PreferenceCategory  android:title="Security" >
    <Preference
        android:key="@string/privacy_key"
        android:title="@string/privacy_policy"
        android:icon="@drawable/ic_baseline_security_24"
        />
    <Preference

        android:icon="@drawable/ic_baseline_menu_book_24"
        android:key="@string/terms_key"
        android:title="@string/terms"
        />
    <Preference
        android:icon="@drawable/ic_baseline_logout_24"
        android:key="@string/logout_key"
        android:title="@string/logout"
        />
    </PreferenceCategory>

</PreferenceScreen>